--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "devDependencies": {
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "sass": "^1.53.0"
   },
   "keywords": [],
   "author": "",
