--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "normalize.css": "^8.0.1"
+    "react-dom": "18.2.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "devDependencies": {
     "prisma": "^4.12.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.3.1"
   },
   "keywords": [],
   "author": "",
