--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.15.1",
     "@prisma/client": "^4.12.0",
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "flowbite": "^1.6.5",
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-geocode": "^0.2.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.5.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
