--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.3",
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
