--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.12.0",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.3.5",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
@@ -24,7 +25,6 @@
     "react-dom": "18.2.0",
     "react-geocode": "^0.2.3",
     "react-scripts": "^5.0.1",
-    "react-tailwindcss-datepicker": "^1.5.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
