--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-dom": "18.2.0",
     "react-geocode": "^0.2.3",
     "react-scripts": "^5.0.1",
