--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA"
-NEXT_PUBLIC_API_KEY=Your_google_maps_API_key_in_quotes
+NEXT_PUBLIC_API_KEY="Your_google_maps_API_key"_in_quotes"
